# circuit_simulator

./: CMakeLists.txt  analyzer.c  analyzer.h  circuit.c  circuit.h  circuit.txt  component.c  component.h  connection.c  connection.h  element.c  element.h  equation.c  equation.h  main.c  node.c  node.h  path.c  path.h  paths.c  paths.h  searcher.c  searcher.h  simulator.c  simulator.h
